<resources>
    <string name="app_name">snuev</string>

    <!-- header -->
    <string name="header_latest_evaluations">최근 강의평</string>
    <string name="header_most_evaluated_lectures">강의평이 많은 강의</string>
    <string name="header_top_rated_lectures">평점이 높은 강의</string>
    <string name="header_most_liked_evaluations">추천 강의평</string>
    <string name="header_evaluations">강의평</string>
    <string name="header_profile">%1$s 님</string>
    <string name="header_sign_up">가입하기</string>
    <string name="header_sign_up_complete">메일 전송 완료</string>
    <string name="header_search_filter">상세조건 설정</string>

    <!-- criteria -->
    <string name="criteria_score">/총점</string>
    <string name="criteria_easiness">/난이도 쉬움</string>
    <string name="criteria_grading">/학점 잘 줌</string>
    <string name="criteria_no_slash_score">총점</string>
    <string name="criteria_no_slash_easiness">난이도 쉬움</string>
    <string name="criteria_no_slash_grading">학점 잘 줌</string>
    <string name="criteria_easiness_hard">어려움</string>
    <string name="criteria_easiness_easy">쉬움</string>

    <!-- filter -->
    <string name="filter_department">학과명</string>
    <string name="filter_grade">학년</string>
    <string name="filter_credits">학점</string>
    <string name="filter_type">구분</string>
    <string name="filter_academic_basics">학문의 기초</string>
    <string name="filter_academic_world">학문의 세계</string>
    <string name="filter_optional_cultural_studies">선택교양</string>

    <!-- grade filter -->
    <string name="filter_grade_1">1학년</string>
    <string name="filter_grade_2">2학년</string>
    <string name="filter_grade_3">3학년</string>
    <string name="filter_grade_4">4학년</string>
    <string name="filter_grade_5">5학년</string>
    <string name="filter_grade_master">석사</string>
    <string name="filter_grade_doctor">박사</string>
    <string name="filter_grade_both">석박사통합</string>

    <!-- credit filter -->
    <string name="filter_credit_1">1학점</string>
    <string name="filter_credit_2">2학점</string>
    <string name="filter_credit_3">3학점</string>
    <string name="filter_credit_4">4학점</string>

    <!-- type filter -->
    <string name="filter_type_cultural">교양</string>
    <string name="filter_type_paper">논문</string>
    <string name="filter_type_graduate">대학원</string>
    <string name="filter_type_select">일선</string>
    <string name="filter_type_major_select">전선</string>
    <string name="filter_type_major">전필</string>

    <!-- academic basics filter -->
    <string name="filter_academic_basic_thought">사고와 표현</string>
    <string name="filter_academic_basic_foreign_language">외국어</string>
    <string name="filter_academic_basic_analysis">수량적 분석과 추론</string>
    <string name="filter_academic_basic_experimental">과학적 사고와 실험</string>
    <string name="filter_academic_basic_computer">컴퓨터와 정보 활용</string>

    <!-- academic world filter -->
    <string name="filter_academic_world_culture">언어와 문화</string>
    <string name="filter_academic_world_art">문화와 예술</string>
    <string name="filter_academic_world_philosophy">역사와 철학</string>
    <string name="filter_academic_world_politics_economics">정치와 경제</string>
    <string name="filter_academic_world_social">인간과 사회</string>
    <string name="filter_academic_world_nature">자연과 기술</string>
    <string name="filter_academic_world_life">생명과 환경</string>

    <!-- optional cultural studies filters -->
    <string name="filter_cultural_studies_pe">체육</string>
    <string name="filter_cultural_studies_art">예술실기</string>
    <string name="filter_cultural_studies_leadership">대학과 리더십</string>
    <string name="filter_cultural_studies_creativity">창의와 융합</string>
    <string name="filter_cultural_studies_korea">한국의 이해</string>

    <!-- score -->
    <string name="score_0_decimals">%.0f</string>
    <string name="score_1_decimals">%.1f</string>

    <!-- detail -->
    <string name="lecture_details">%1$s \u00B7 %2$s \u00B7 %3$s 교수</string>

    <!-- semester -->
    <string name="semester_spring">%1$d 1학기</string>
    <string name="semester_summer">%1$d 여름 계절</string>
    <string name="semester_fall">%1$d 2학기</string>
    <string name="semester_winter">%1$d 겨울 계절</string>

    <!-- desc -->
    <string name="desc_snuev_returns">진짜가 돌아왔다\n여기가 바로 그 리얼 서울대학교 강의평가 스누이브</string>
    <string name="desc_only_my_snu">서울대학교 메일로 인증받은 분만 입장 가능</string>
    <string name="desc_same_as_my_snu">서울대학교 이메일 인증이 필요하므로 마이스누 계정과 동일하게 입력해주세요.</string>
    <string name="desc_no_search_result">키워드를 직접 입력하거나, 상세조건 검색을 통해 원하는 강의를 찾아보세요!</string>
    <string name="desc_no_evaluations">강의평이 아직 없습니다. 첫 강의평을 작성해보세요!</string>
    <string name="desc_sign_up_complete">아래 마이스누 웹메일로 인증메일을 전송하였습니다. 메일을 확인해 인증링크를 클릭해 주세요.</string>

    <!-- button -->
    <string name="button_leave_review">강의평 쓰기</string>
    <string name="button_register">등록</string>
    <string name="button_sign_in">로그인</string>
    <string name="button_sign_up">가입하기</string>
    <string name="button_to_sign_up">가입하기</string>
    <string name="button_to_find_password">비밀번호 찾기</string>
    <string name="button_to_sign_in">로그인하기</string>
    <string name="button_to_my_snu">mySNU 바로가기</string>
    <string name="button_complete">완료</string>

    <!-- hint -->
    <string name="hint_leave_review">강의평을 입력하세요.</string>
    <string name="hint_my_snu_account">마이스누 계정</string>
    <string name="hint_my_snu_domain">\@snu.ac.kr</string>
    <string name="hint_department">학과명 검색</string>
    <string name="hint_nickname">별명</string>
    <string name="hint_password">비밀번호</string>

    <!-- tabs -->
    <string name="tab_about">내 정보</string>
    <string name="tab_my_evaluations">내가 쓴 강의평 목록</string>
    <string name="tab_bookmarked_lectures">관심 강의</string>
    <string name="tab_change_password">비밀번호 변경</string>

    <!-- item -->
    <string name="item_email">이메일</string>
    <string name="item_nickname">별명</string>
    <string name="item_department">학과명</string>
    <string name="item_current_password">현재 비밀번호</string>
    <string name="item_new_password">새로운 비밀번호</string>
    <string name="item_check_password">비밀번호 확인</string>

    <!-- error -->
    <string name="error_network">네트워크 연결 오류가 발생했습니다</string>
    <string name="error_username_empty">마이스누 계정을 입력해주세요</string>
    <string name="error_password_empty">비밀번호를 입력해주세요</string>
    <string name="error_department_empty">전공을 정해주세요</string>
    <string name="error_nickname_empty">별명을 입력해주세요</string>
    <string name="error_invalid_credentials">마이스누 계정 혹은 비밀번호를 잘못 입력했습니다</string>
    <string name="error_account_exists">계정이 이미 존재합니다</string>
    <string name="error_password_too_short">비밀번호가 너무 짧아요 ㅠㅠ</string>
</resources>
