<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewmodel"
            type="com.wafflestudio.snuev.view.signup.SignUpViewModel"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/bg_dotted_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="60dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingStart="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/img_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/header_sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/black_80"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_layout_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/field_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_my_snu_account"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{() -> viewmodel.clearUsernameError()}"
                        android:text="@={viewmodel.username}"
                        android:textSize="16sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hint_my_snu_domain"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/edit_layout_email"
                    app:layout_constraintTop_toTopOf="@+id/edit_layout_email"
                    />

                <TextView
                    android:id="@+id/text_email_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_same_as_my_snu"
                    android:textColor="@color/black_40"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_layout_email"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_layout_department"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/field_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_email_desc"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{(view) -> viewmodel.searchDepartments()}"
                        android:hint="@string/hint_department"
                        android:inputType="textFilter"
                        android:onTextChanged="@{() -> viewmodel.clearDepartmentError()}"
                        android:text="@={viewmodel.departmentSearchQuery}"
                        android:textSize="16sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="22dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_layout_department"
                    app:layout_constraintEnd_toEndOf="@+id/edit_layout_department"
                    app:layout_constraintTop_toTopOf="@+id/edit_layout_department"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_layout_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/field_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_layout_department"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_nickname"
                        android:inputType="textPersonName"
                        android:onTextChanged="@{() -> viewmodel.clearNicknameError()}"
                        android:text="@={viewmodel.nickname}"
                        android:textSize="16sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_layout_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/field_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_layout_nickname"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:onTextChanged="@{() -> viewmodel.clearPasswordError()}"
                        android:text="@={viewmodel.password}"
                        android:textSize="16sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_sign_up"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{(view) -> viewmodel.signUp()}"
                    android:text="@string/button_sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_layout_password"
                    />

                <Button
                    android:id="@+id/button_to_sign_in"
                    style="@style/ToButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/button_to_sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
                    app:layout_constraintVertical_bias="0.0"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_departments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:background="@drawable/bg_border_gray"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/edit_layout_department"
                    app:layout_constraintStart_toStartOf="@+id/edit_layout_department"
                    app:layout_constraintTop_toTopOf="@+id/edit_layout_department"
                    />
            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginBottom="19dp"
                android:layout_marginEnd="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginStart="28dp"
                android:src="@drawable/bg_dotted_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
